Update docs and scripts k8s-generator bash script executable